<resources>
    <string name="app_name">HabbitNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Finish editing</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="customize_habit">Customize Habit</string>
    <string name="finished_habit_edit">Done</string>
    <string name="hint_habit_name">Habit name</string>
    <string name="repeat">Repeat</string>
    <string name="day_sunday">Sun</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thursday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="no_day_selected">No Repeat Days</string>
    <string name="alarm">Alarm</string>
    <string name="gentle">Gentle</string>
    <string name="type">Type</string>
    <string name="delete">Delete</string>
    <string name="cd_delete_item">Delete Item</string>
    <string name="cd_habit_type">Habit Type</string>
    <string name="alarm_page_title">It\'s time for...</string>

    <string-array name = "daysOfWeek">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
</resources>