<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>
        <variable
            name="editHabitViewModel"
            type="com.newpath.jeg.habbitnow.ui.edithabit.EditHabitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <EditText
            android:id="@+id/et_habit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/hint_habit_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="12:59 AM"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_habit_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/repeat"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_time" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">


            <ToggleButton
                android:id="@+id/btn_select_sun"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_sunday"
                android:textOn="@string/day_sunday" />

            <ToggleButton
                android:id="@+id/btn_select_mon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_monday"
                android:textOn="@string/day_monday" />

            <ToggleButton
                android:id="@+id/btn_select_tue"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_tuesday"
                android:textOn="@string/day_tuesday" />

            <ToggleButton
                android:id="@+id/btn_select_wed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_wednesday"
                android:textOn="@string/day_wednesday" />

            <ToggleButton
                android:id="@+id/btn_select_thu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_thursday"
                android:textOn="@string/day_thursday" />

            <ToggleButton
                android:id="@+id/btn_select_fri"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_friday"
                android:textOn="@string/day_friday" />

            <ToggleButton
                android:id="@+id/btn_select_sat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_weekdays"
                android:textOff="@string/day_saturday"
                android:textOn="@string/day_saturday" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/type"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ToggleButton
                android:id="@+id/tbtn_alarm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/alarm"
                android:textOn="@string/alarm" />

            <ToggleButton
                android:id="@+id/tbtn_gentle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/gentle"
                android:textOn="@string/gentle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
