<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="habit"
            type="com.newpath.jeg.habbitnow.models.MyHabit"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@color/bgDeleteRow">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="@dimen/ic_delete"
                android:layout_height="@dimen/ic_delete"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/cd_delete_item"
                android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/delete_icon"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textSize="13sp" />
        </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:elevation="2dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/iv_habit_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/cd_habit_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_habit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Sample Name"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_habit_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_days_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Mon Wed Fri"
            app:layout_constraintStart_toEndOf="@+id/iv_habit_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_habit_name" />

        <TextView
            android:id="@+id/tv_time_begins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="9:15 PM"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_habit_name" />

        <TextView
            android:id="@+id/tv_repeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Every 2 hours"
            app:layout_constraintEnd_toEndOf="@+id/tv_time_begins"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_begins" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>